fix current user line

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,3 +3,5 @@
 <a href="/login">Login</a>
 <a href="/user">Sign Up</a>
 <a href="/logout">Logout</a>
+
+<p>Logged in as: <%= @current_user.try(:email) %></p>
